--- a/wwr/about.html
+++ b/wwr/about.html
@@ -27,10 +27,9 @@
         </nav>
     </header>
     <main>
-        <div>
-            <div class="c_toptitle"><h1>Rafting Travel</h1></div>
-            
-            <img src="images/hero.jpg" alt="Hero" class="topimage">            
+        <div class="part1">
+            <img src="images/hero.jpg" alt="Hero">
+            <h1>Rafting Travel</h1>
             <article>
                 <img src="images/happy_client.jpg" alt="Happy client" class="special">
                 <p>Rafting Travel an adventure company. <b>Our purpose</b> is to offer our clients safe rafting trips, 
